--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,7 @@ html {
 body {
   font-family: 'Source Sans Pro', sans-serif;
   padding: 2em;
-  font-size: 1.25em;
+  font-size: 1em;
   height: 100%;
 }
 
@@ -117,15 +117,17 @@ body {
 
 .div-1, .div-2, .div-3 {
   /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
-  color: #fff;
-  line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
-  height: 300px;
+  color: antiquewhite;
+  line-height: 1.45em;
+  font-size: 1.45em;
+  background-color: royalblue;
+  height: 500px;
   display: flex;
   width: 30%;
   justify-content: center;
   align-items: center;
+  padding: 5px;
+  text-align: center;
 }
 
 
